@@ -1,3 +1,7 @@
+2010-09-14  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el ("emms-playlist-mode"): Use space to pause.
+
 2010-09-08  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-site.el: Add ibus setting.
